[package]
name = "bevy_mag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "~0.10.1"
bevy_egui = "~0.20.2"
bevy_serial = { git = "https://github.com/bofh/bevy_serial.git", branch = "bevy-0.10.0" }
nalgebra = "0.32.2"
rand = "0.8.5"
serde_json = "1.0.95"
